--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>StopWatch Program</h1>
     <div class="stopwatch-container">
         <div class="stopwatch">
-            <p class="stopwatch-display">10 : 00 : 00</p>
+            <p class="stopwatch-display">10:00:00</p>
             <div class="stopwatch-btn-container">
                 <button class="btn btn-stopwatch-start">Start</button>
                 <button class="btn btn-stopwatch-stop">Stop</button>
